--- a/client/index.html
+++ b/client/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <div id="toast"></div>
     
     <script type="module" src="/src/index.jsx"></script>
   </body>
