--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <title>تکنوشاپ</title>
   </head>
-  <body>
+  <body class="bg-zinc-100 font-vazirmatn-regular text-zinc-900">
     <div id="root"></div>
     <div id="toast"></div>
     
