Create modal portal

--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,7 @@
   <body class="bg-zinc-100 font-vazirmatn-regular text-zinc-900">
     <div id="root"></div>
     <div id="toast"></div>
+    <div id="modal"></div>
     
     <script type="module" src="/src/index.jsx"></script>
   </body>
